# match-madness

./: .gitignore  README.md  pylintrc.toml  pyproject.toml
match_madness/: __init__.py
match_madness/gui/: card.py  combo.py  game_frame.py  main_frame.py  progress.py
match_madness/logger/: logger.py
match_madness/populate/: base_methods.py  csv_methods.py  json_methods.py
matching-madness/: __init__.py
matching-madness/gui/: Card.py  GameFrame.py
matching_madness/: __init__.py
matching_madness/gui/: card.py  game_frame.py  main_frame.py  progress.py
matching_madness/populate/: base_methods.py  csv_methods.py  json_methods.py
matching_madness/populate/data/: eng1.csv  eng1.json  esp1.json
