[tool.poetry]
name = "matching-madness"
version = "0.2.0"
description = "Project for CS class of my Tkinter implementation of Duolingo's matching madness"
authors = ["SmarterFuture <anonymous.daisy.007@gmail.com>"]
license = "MIT License"
# readme = "README.md"
include = [
    { path = "./match_madness/populate/data/", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.2"
pyink = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
